--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ $RECYCLE.BIN/
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
+Properties/AssemblyCopyright.cs
